Fix line spacing for autocomplete suggestions

--- a/src/ui/public/query_bar/directive/suggestion.less
+++ b/src/ui/public/query_bar/directive/suggestion.less
@@ -100,6 +100,7 @@
       .typeahead-item {
         padding: 0;
         border-bottom: none;
+        line-height: normal;
 
         &:hover {
           cursor: pointer;
